--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,2 @@
-# Deepseek API Keys
-DEEPSEEK_V3_API_KEY=your_deepseek_v3_api_key_here
-DEEPSEEK_R1_API_KEY=your_deepseek_r1_api_key_here
-BING_API_KEY=your_bing_api_key_here
-
-# Server Configuration
-PORT=3001 
+PORT=
+DEEPSEEK_API_KEY=
