--- a/package.json
+++ b/package.json
@@ -11,9 +11,24 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-methods": "^7.23.3",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-numeric-separator": "^7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.3",
+    "@babel/plugin-transform-optional-chaining": "^7.23.3",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.3",
+    "@eslint/config-array": "^1.0.4",
+    "@eslint/object-schema": "^1.0.1",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@rollup/plugin-terser": "^0.4.4",
+    "eslint": "^8.57.0",
+    "rimraf": "^5.0.5",
+    "glob": "^10.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +53,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@babel/plugin-proposal-private-methods": "@babel/plugin-transform-private-methods@^7.23.3",
+    "@babel/plugin-proposal-class-properties": "@babel/plugin-transform-class-properties@^7.23.3",
+    "@babel/plugin-proposal-numeric-separator": "@babel/plugin-transform-numeric-separator@^7.23.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "@babel/plugin-transform-nullish-coalescing-operator@^7.23.3",
+    "@babel/plugin-proposal-optional-chaining": "@babel/plugin-transform-optional-chaining@^7.23.3",
+    "@babel/plugin-proposal-private-property-in-object": "@babel/plugin-transform-private-property-in-object@^7.23.3",
+    "@humanwhocodes/config-array": "@eslint/config-array@^1.0.4",
+    "@humanwhocodes/object-schema": "@eslint/object-schema@^1.0.1",
+    "sourcemap-codec": "@jridgewell/sourcemap-codec@^1.4.15",
+    "rollup-plugin-terser": "@rollup/plugin-terser@^0.4.4",
+    "glob": "^10.3.10",
+    "rimraf": "^5.0.5"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
