对接自建FastGPT中包含博查AI搜索的智能体，未处理已搜索的样式

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,12 @@ DEEPSEEK_API_KEY=
 
 # oneapi api key
 ONEAPI_API_KEY=
+
+# bocha api key
+BOCHAAI_API_KEY=
+
+# bocha-deepseek-v3 api key:
+DEEPSEEK_V3_WITH_BOCHA=
+
+# bocha-deepseek-r1:671b api key:
+DEEPSEEK_R1_WITH_BOCHA=
